Background bug on mobile: fix

--- a/style/style.css
+++ b/style/style.css
@@ -17,10 +17,6 @@ body {
     width: 100%;
     height: 100%;
     scroll-behavior: smooth;
-}
-
-section {
-    height: 100vh;
     background: linear-gradient(0deg, rgba(0, 255, 179, 0.1), rgba(0, 0, 0, 0.9)), url(../assets/back3.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
